crates/turborepo/tests/snapshots/edit_turbo_json__task_hashes_my_app_depends_on.snap
---
source: crates/turborepo/tests/edit_turbo_json.rs
expression: task_hash_snapshot(tempdir.path())
---
another#build=e9a99dd97d223d88
my-app#build=8637a0f5db686164
util#build=bf1798d3e46e1b48
